New style for directive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<script src="app/out.js"></script>
 	</head>
 	<body ng-app="app">
-		<emails-editor></emails-editor>
+		<div class="main-div">
+			<emails-editor></emails-editor>
+		</div>
+		
 	</body>
 </html>	
