remove ng-controller attr in directive, exchange some code in ts, html and css

--- a/app/inputEmail.html
+++ b/app/inputEmail.html
@@ -3,28 +3,20 @@
 			<div class="title">Share "Board name" with others</div>
 		</div>
 		<div class ='email-container'
-			 ng-controller="EmailController as ctrl" 
-			 ng-click="ctrl.setInputFocus($event)">
-			<div class="email-container-deeper"
-				ng-mouseleave="ctrl.addEmail(ctrl.emailString)">
-				<div>
-					<div ng-repeat="email in ctrl.emails track by $index">
-						<div class="{{email.isValid ? 'email-div' : 'email-div invalid'}}">
-							<div class="email-name">{{email.name}}</div>
-							<div ng-click="ctrl.deleteEmailString(email.order)" class="close-button">&#10060</div>
-						</div>
+			 ng-click="ctrl.setInputFocus($event)"
+			 ng-mouseleave="ctrl.addEmail(ctrl.emailString)">
+			<div ng-repeat="email in ctrl.emails track by $index">
+				<div class="email-div">
+					<div class="{{email.isValid ? 'email-name' : 'email-name invalid'}}">
+						<div class="email-under-div">{{email.name}}</div>
 					</div>
-					<input id="inputFocus"
-							type="text" 
-				   			class="email-string" 
-				   			ng-model="ctrl.emailString" 
-				   			ng-keyup="ctrl.addEmailWithEvent($event)" 
-				   			placeholder="add more people..."
-				   			/>
+					<div ng-click="ctrl.deleteEmailString(email.order)" class="close-button">&#10060</div>
 				</div>
 			</div>
-			<div class="button-div">
-				<button class="email-button" ng-click="ctrl.addRandomEmail()">add random email</button>
-				<button class="email-button" ng-click="ctrl.getEmailsCount()">get emails count</button>
-			</div>
+			<input id="inputFocus"
+					type="text" 
+				   	class="email-string" 
+				   	ng-model="ctrl.emailString" 
+				   	ng-keyup="ctrl.addEmailWithEvent($event)" 
+				   	placeholder="add more people..."/>
         </div>
